--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,25 +42,28 @@
           </nav>
     </header>
     <main>
+      <div class="caja">
         <div class="imgcontact">
             <h1>Contact</h1>
         </div>
-        <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Name</label>
-            <input type="text" class="form-control" id="exampleFormControlInput1" >
+        <div class="containerContact">
+          <div class="mb-3 Contact">
+              <label for="exampleFormControlInput1" class="form-label">Name</label>
+              <input type="text" class="form-control" id="exampleFormControlInput1" >
+          </div>
+          <div class="mb-3  Contact">
+              <label for="exampleFormControlInput1" class="form-label">Email</label>
+              <input type="email" class="form-control" >
+          </div>
+          <div class="mb-3  Contact">
+              <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+              <textarea class="form-control"  rows="3"></textarea>
+          </div>
+          <div>
+              <input type="submit">
+          </div>
         </div>
-        <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Email</label>
-            <input type="email" class="form-control" >
-        </div>
-        <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-            <textarea class="form-control"  rows="3"></textarea>
-        </div>
-        <div>
-            <input type="submit">
-        </div>
-
+      </div>  
     </main>
     <footer>
         <nav class="navbar bg-body-tertiary">
