--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
     <footer>
         <nav class="navbar bg-body-tertiary">
             <form class="container-fluid justify-content-start">
-              <button class="btn btn-outline-success me-2" type="button">SOCIAL</button>
-              <button class="btn btn-outline-success me-2" type="button">SOCIAL</button>
-              <button class="btn btn-outline-success me-2" type="button">SOCIAL</button>
+              <a class="btn btn-outline-success me-1"  href="https://www.facebook.com/"><img src="./Assets/facebook.png" alt="facebook"></a>
+              <a class="btn btn-outline-success me-1" href="https://web.whatsapp.com/"><img src="./Assets/whatsapp.png" alt="whatsapp"></a>
+              <a class="btn btn-outline-success me-1" href="https://www.instagram.com/"><img src="./Assets/instagram.png" alt="instagram"></a>
             </form>
+            <p>JUAN FRANCO RIVAROLA</p> 
         </nav>
 
 
@@ -87,7 +88,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <script src="./Assets/js/data.js"></script>
-    <script src="./Assets/js/index.js"></script>
+
+    <script type="module" src="./Assets/js/index.js"></script>
 </body>
 </html>
