--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,79 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact-Page</title>
-    <link rel="shortcut icon" href="../Assets/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../styles/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-</head>
-<body>
-    <header>
-        <div>
-            <img class="logo" src="../Assets/amazing_brand.png" alt="logo">
-        </div>  
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                   
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./upcomingEvents.html">Upcoming Events </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./pastEvents.html">Past Events</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/stats.html">Stats</a>
-                  </li>
-                </ul>
-              </div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Contact-Page</title>
+        <link rel="shortcut icon" href="../Assets/favicon.png" type="image/x-icon" />
+        <link rel="stylesheet" href="../styles/style.css" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+            crossorigin="anonymous"
+        />
+    </head>
+    <body>
+        <header>
+            <div>
+                <img class="logo" src="../Assets/amazing_brand.png" alt="logo" />
             </div>
-          </nav>
-    </header>
-    <main>
-      <div class="caja">
-        <div class="imgcontact">
-            <h1>Contact</h1>
-        </div>
-        <div class="containerContact">
-          <div class="mb-3 Contact">
-              <label for="exampleFormControlInput1" class="form-label">Name</label>
-              <input type="text" class="form-control" id="exampleFormControlInput1" >
-          </div>
-          <div class="mb-3  Contact">
-              <label for="exampleFormControlInput1" class="form-label">Email</label>
-              <input type="email" class="form-control" >
-          </div>
-          <div class="mb-3  Contact">
-              <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-              <textarea class="form-control"  rows="3"></textarea>
-          </div>
-          <div>
-              <input type="submit">
-          </div>
-        </div>
-      </div>  
-    </main>
-    <footer>
-        <nav class="navbar bg-body-tertiary">
-            <form class="container-fluid justify-content-start">
-              <button class="btn btn-outline-success me-2" type="button">SOCIAL</button>
-              <button class="btn btn-outline-success me-2" type="button">SOCIAL</button>
-              <button class="btn btn-outline-success me-2" type="button">SOCIAL</button>
-            </form>
-        </nav>     
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>    
-</body>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                    <button
+                        class="navbar-toggler"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarNav"
+                        aria-controls="navbarNav"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation"
+                    >
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./upcomingEvents.html">Upcoming Events </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pastEvents.html">Past Events</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../pages/stats.html">Stats</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <div class="caja">
+                <div class="imgcontact">
+                    <h1>Contact</h1>
+                </div>
+                <div class="containerContact">
+                    <div class="mb-3 Contact">
+                        <label for="exampleFormControlInput1" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput1" />
+                    </div>
+                    <div class="mb-3 Contact">
+                        <label for="exampleFormControlInput1" class="form-label">Email</label>
+                        <input type="email" class="form-control" />
+                    </div>
+                    <div class="mb-3 Contact">
+                        <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                        <textarea class="form-control" rows="3"></textarea>
+                    </div>
+                    <div>
+                        <input type="submit" />
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer>
+            <nav class="navbar bg-body-tertiary">
+                <form class="container-fluid justify-content-start">
+                    <button class="btn btn-outline-success me-2" type="button">SOCIAL</button>
+                    <button class="btn btn-outline-success me-2" type="button">SOCIAL</button>
+                    <button class="btn btn-outline-success me-2" type="button">SOCIAL</button>
+                </form>
+            </nav>
+        </footer>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+            crossorigin="anonymous"
+        ></script>
+    </body>
 </html>
