--- a/pages/stats.html
+++ b/pages/stats.html
@@ -58,8 +58,7 @@
                 <h1>Stats</h1>
             </div>
             <div class="d-flex justify-content-center"><h3>Events statistics</h3></div>
-
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-center ml-5">
                 <table class="table table-bordered w-75">
                     <tr>
                         <th scope="col">Event with the heigest % of attendance</th>
